fakechroot (2.3) unstable; urgency=low

  * UNRELEASED
  * Initial port to FreeBSD 5.x.
  * Implement <fts.h> and <ftw.h> functions.

 -- Piotr Roszatycki <dexter@debian.org>  Mon,  5 Sep 2005 19:09:13 +0200

fakechroot (2.2) unstable; urgency=low

  * Included config.h, so GLIBC 2.3 functions works now.
  * Initial port to Solaris 8.

 -- Piotr Roszatycki <dexter@debian.org>  Fri,  2 Sep 2005 16:55:29 +0200

fakechroot (2.1) unstable; urgency=low

  * Add missing lremovexattr(2) function.
  * Support also older GLIBC (Debian woody, Ubuntu hoary).

 -- Piotr Roszatycki <dexter@debian.org>  Thu, 25 Aug 2005 12:51:29 +0200

fakechroot (2.0) unstable; urgency=low

  * The code was rewritten from scratch. The fakeroot functionality
    was dropped, so the fakechroot can extend the fakeroot functionality
    or can be used without it.
  * The FAKECHROOT_VERSION environment variable contains the current
    package number.

 -- Piotr Roszatycki <dexter@debian.org>  Wed, 24 Aug 2005 14:32:26 +0200

fakechroot (0.9+1.3) unstable; urgency=medium

  * Clean up the code - no static variables.
  * narrow_chroot_path(path) macro returns original path if it is outside
    chroot so getcwd(2) works for /dev and /proc.
  * Implement lutimes(2) function.
  * Fixed path for biarch libraries on sparc and amd64.
  * Updated ldd.fake script. Now works on biarch systems.
  * Biarch support for s390.
  * Updated documentation.

 -- Piotr Roszatycki <dexter@debian.org>  Mon, 20 Jun 2005 10:04:24 +0200

fakechroot (0.8+1.3) unstable; urgency=medium

  * Merged with fakeroot 1.3.
  * chroot(2) function includes default path to LD_LIBRARY_PATH.
  * Fixed scandir64(3) function.

 -- Piotr Roszatycki <dexter@debian.org>  Tue, 14 Jun 2005 16:20:12 +0200

fakechroot (0.7+1.2.4) unstable; urgency=low

  * Implement wrapper for scandir(3) function. Now, the run-parts(8) works
    correctly. Closes: #312409.
  * Implement wrapper for glob(3) functions. Thanks to ALT Linux guys.