@@ -2,4 +2,4 @@ AUTOMAKE_OPTIONS=foreign
 
 lib_LTLIBRARIES=libfakechroot.la
 libfakechroot_la_SOURCES=libfakechroot.c
-libfakechroot_la_LDFLAGS=-release $(VERSION)
+libfakechroot_la_LDFLAGS=-avoid-version
