@@ -7,6 +7,7 @@ CLEANFILES=fakechroot
 do_subst = sed -e 's,[@]prefix[@],$(prefix),g' \
 	   -e 's,[@]bindir[@],$(bindir),g' \
 	   -e 's,[@]libdir[@],$(libdir),g' \
+	   -e 's,[@]libpath[@],$(libpath),g' \
 	   -e 's,[@]fakechroot_transformed[@],'`echo fakechroot | sed -e '$(transform)'`',g' \
 	   -e 's,[@]VERSION[@],$(VERSION),g' 
 
